# Project-Ugomemo

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  repomix-output.xml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  SIDECAR_TRIPLE_GUIDE.md  index.html  pages.css
docs/ja/: index.html
src/: styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: FFMPEG_LICENSE_NOTICE.txt  ffmpeg  ffprobe
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/drawing/: history.ts  project.ts  renderer.ts  toolStrategies.ts  tools.ts  types.ts
src/drawing/brush/: engine.ts  presets.ts  seededRandom.ts  settings.ts  stampPlacement.ts  stampRenderer.ts  types.ts
src/drawing/brush/stamps/bitmap/: imageDataToStampMask.ts  loadBitmapStamp.ts
src/drawing/brush/tips/: index.ts  registry.ts  resizeStampMask.ts  resolveBrushTipMask.ts  types.ts
src/drawing/strokeShapes/: index.ts  round.ts  square.ts  types.ts
src/tauri/: projectCommands.ts
src/ui/: App.tsx  constants.ts  types.ts
src/ui/components/: IconButton.tsx  ProjectPreviewFrame.tsx
src/ui/keyboard/: shortcuts.ts
src/ui/tone/: tonePattern.ts
