[package]
name = "project-ugomemo"
version = "0.1.0"
description = "A compact Ugomemo-inspired pixel drawing app."
authors = ["miyashu"]
edition = "2021"

[lib]
name = "project_ugomemo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
